[sndy] add media query comments, update class -> className

--- a/src/css/carousel-template.scss
+++ b/src/css/carousel-template.scss
@@ -35,7 +35,7 @@
     height: 317px;
 }
 
-//media queries responsive layout
+//media queries for responsive layout
 @media screen and (max-width: 1200px) {
     .accedo-slide-video {
         width: 212px;
